# spcodegen

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: generator.rs  lib.rs  meta.rs  table_json.rs
