[package]
name = "spcodegen"
version = "0.1.0"
authors = [ 
    "Jovansonlee Cesar <ivanceras@gmail.com>",
    "Mike Tang <miketang84@outlook.com>" 
]
license = "MIT"
description = "A model code generator from database table using sporm ORM"
readme = "README.md"
repository = "https://github.com/sappworks/spcodegen"
documentation = "https://github.com/sappworks/spcodegen"
keywords = ["orm", "codegen", "generator", "database"]

[lib]
name = "spcodegen"


[dependencies.chrono]
version = "0.2"
features = ["serde"]

#[dependencies.serde_json]
#git = "https://github.com/serde-rs/json.git"
#version = "*"

[dependencies]
serde = "0.7"
serde_json = "0.7"
uuid = { version = "0.2", features = ["serde", "v4"] }
time = "0.1"


[dependencies.sporm]
git = "https://github.com/sappworks/sporm.git"

